# PyAlarmClock

./: Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
Examples/: EEPROM-tool.py  set_time.py
PyAlarmClock/: __init__.py  days_of_week.py
examples/: EEPROM-tool.py  mqtt_bridge.py
src/PyAlarmClock/: __init__.py  const.py  dataclasses.py  exceptions.py
src/PyAlarmClock/cmds/: EEPROM_tool.py  __init__.py  mqtt_bridge.py
src/PyAlarmClock/drivers/: __init__.py  base.py  serial.py
test/: test_Alarm.py  test_DaysOfWeek.py
tests/integration/: test_hardware.py
tests/integration/hardware/: test_hardware.py
tests/unit/: test_Alarm.py  test_DaysOfWeek.py
