[metadata]
name = PyAlarmClock
version = 0.1.0
author = Ondřej Sluka
author_email = ondras12345@gmail.com
description = A library for interfacing with AlarmClock over a serial port
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/ondras12345/PyAlarmClock/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    PyYAML >= 6.0
    pyserial >= 3.5
    paho-mqtt >= 1.6.1
    tqdm >= 4.62.3

[options.extras_require]
docs =
tests =
dev =
    flake8
    bandit[toml]
    mypy
    types-PyYAML >= 6.0.0

[options.packages.find]
where = src


[options.entry_points]
console_scripts =
        ac2mqtt = PyAlarmClock.cmds.mqtt_bridge:main
        acEEPROM = PyAlarmClock.cmds.EEPROM_tool:main

[flake8]
exclude =
    .git
    __pycache__
    .venv
    venv
    build
